Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Test
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <title>Citizenbridge by CSC301H-Fall2013</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>Citizenbridge</h1>
+        <h2>CtitizenBridge by Team Athabasca</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/CSC301H-Fall2013/citizenbridge" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h1>
+<a name="team-athabasca-home-page" class="anchor" href="#team-athabasca-home-page"><span class="octicon octicon-link"></span></a>Team Athabasca home Page</h1>
+
+<h1>
+<a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h1>
+
+<p>CitizenBridge would like to create a relationship between citizens and representatives. The current government web page is complicated to use and documents are hidden away. CitizenBridge seeks to create a system that would simplify access to documents and allow citizens to interact with their representatives.</p>
+
+<h1>
+<a name="technology" class="anchor" href="#technology"><span class="octicon octicon-link"></span></a>Technology</h1>
+
+<p>Php, Codeignitor, W.E.T (Web Experience Tool kit), JavaScript</p>
+      </section>
+    </div>
+
+    
+  </body>
+</html>
