--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Citizenbridge : CtitizenBridge by Team Athabasca" />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Citizenbridge by CSC301H-Fall2013</title>
+    <title>Citizenbridge</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Citizenbridge</h1>
-        <h2>CtitizenBridge by Team Athabasca</h2>
-      </div>
-    </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/CSC301H-Fall2013/citizenbridge">View on GitHub</a>
 
-    <div class="container">
-      <section id="main_content">
+          <h1 id="project_title">Citizenbridge</h1>
+          <h2 id="project_tagline">CtitizenBridge by Team Athabasca</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="team-athabasca-home-page" class="anchor" href="#team-athabasca-home-page"><span class="octicon octicon-link"></span></a>Team Athabasca home Page</h1>
+
+<h1>
+<a name="members" class="anchor" href="#members"><span class="octicon octicon-link"></span></a>Members</h1>
+
+<p>Abegail Jakop
+Jie Kang
+John Tongol
+Lita Fan
+Shelton Li</p>
 
 <h1>
 <a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h1>
@@ -31,12 +49,37 @@
 <p>CitizenBridge would like to create a relationship between citizens and representatives. The current government web page is complicated to use and documents are hidden away. CitizenBridge seeks to create a system that would simplify access to documents and allow citizens to interact with their representatives.</p>
 
 <h1>
+<a name="team-charter" class="anchor" href="#team-charter"><span class="octicon octicon-link"></span></a>Team Charter</h1>
+
+<ul>
+<li>Meet up twice a week (Tuesday after lecture ands Thursdays)</li>
+<li>Commit to reply to emails at least on a daily basis </li>
+<li>Communicate via text for small things. </li>
+<li>Skype for chatting </li>
+</ul><h1>
 <a name="technology" class="anchor" href="#technology"><span class="octicon octicon-link"></span></a>Technology</h1>
 
 <p>Php, Codeignitor, W.E.T (Web Experience Tool kit), JavaScript</p>
+
+<h1>
+<a name="deliverable-links" class="anchor" href="#deliverable-links"><span class="octicon octicon-link"></span></a>Deliverable Links</h1>
+
+<ul>
+<li><a href="https://docs.google.com/document/d/1wl6wqzCCHF3f1HszLXQloRFFdg98gW1ii1_4u1vERc8/edit?usp=sharing">Meeting Minutes</a></li>
+<li><a href="https://docs.google.com/spreadsheet/ccc?key=0AqkCTMkYmy6EdGkwN3dKa0hCQWJFQkFENFBDWWZmS1E&amp;usp=sharing">Attendance spread sheet</a></li>
+</ul>
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Citizenbridge maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
