--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Citizenbridge : CtitizenBridge by Team Athabasca" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Citizenbridge by CSC301H-Fall2013</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Citizenbridge</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/CSC301H-Fall2013/citizenbridge">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/CSC301H-Fall2013/citizenbridge">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Citizenbridge</h1>
-          <h2 id="project_tagline">CtitizenBridge by Team Athabasca</h2>
+      <section>
+        <div id="title">
+          <h1>Citizenbridge</h1>
+          <p>CtitizenBridge by Team Athabasca</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h1>
 <a name="team-athabasca-home-page" class="anchor" href="#team-athabasca-home-page"><span class="octicon octicon-link"></span></a>Team Athabasca home Page</h1>
 
@@ -51,12 +58,69 @@ Shelton Li</p>
 <h1>
 <a name="team-charter" class="anchor" href="#team-charter"><span class="octicon octicon-link"></span></a>Team Charter</h1>
 
-<ul>
-<li>Meet up twice a week (Tuesday after lecture ands Thursdays)</li>
-<li>Commit to reply to emails at least on a daily basis </li>
-<li>Communicate via text for small things. </li>
-<li>Skype for chatting </li>
-</ul><h1>
+<h2>
+<a name="purpose" class="anchor" href="#purpose"><span class="octicon octicon-link"></span></a>Purpose</h2>
+
+<p>We, the members of Team Athabasca will work together on improving the CitizenBridge website by providing a more accessible, impactful and personalized user experience for constituents of Canada.</p>
+
+<h2>
+<a name="members-1" class="anchor" href="#members-1"><span class="octicon octicon-link"></span></a>Members</h2>
+
+<p>Lita Fan
+Abegail Jakop
+Jie Kang
+Shelton Li
+John Tongol
+Lev Ufimtsev</p>
+
+<h2>
+<a name="values" class="anchor" href="#values"><span class="octicon octicon-link"></span></a>Values</h2>
+
+<p>We, the members of Team Athabasca promise to uphold the following values as respect to all team members and the project, CitizenBridge.</p>
+
+<ol>
+<li>Teamwork</li>
+<li>Friendship</li>
+<li>Honesty</li>
+<li>Integrity</li>
+</ol><h2>
+<a name="commitments" class="anchor" href="#commitments"><span class="octicon octicon-link"></span></a>Commitments</h2>
+
+<p>We, the members of Team Athabasca promise to uphold the following commitments as respect to all team members and the project, CitizenBridge.</p>
+
+<ol>
+<li>
+<p>We will meet a minimum of two times every week.</p>
+
+<ol>
+<li>a. Tuesdays after CSC301 lecture</li>
+<li>b. Thursdays during CSC301 tutorial</li>
+<li>c. Emergency meetings on Saturdays</li>
+</ol>
+</li>
+<li><p>We will commit to replying to any e-mail within 24 hours.</p></li>
+<li><p>We will work to the best of our abilities in any task assigned to or volunteered for.</p></li>
+<li><p>We will notify other members of any emergencies that will affect our ability to complete assigned tasks as soon as possible.</p></li>
+<li><p>We will assist each other through any problems that we face in the course of this project.</p></li>
+<li><p>We will commit to a friendly and positive working environment for all members.</p></li>
+<li><p>We will commit to the keeping the reporting plan up-to-date and well organized.</p></li>
+</ol><h2>
+<a name="reporting-plan" class="anchor" href="#reporting-plan"><span class="octicon octicon-link"></span></a>Reporting Plan</h2>
+
+<p>In order to communicate progress, Team Athabasca will use Trello software. All tasks will be placed, updated and archived appropriately.
+TODO and DOING sections will contain appropriate items. A separate list will be used for each day's DONE tasks.</p>
+
+<h2>
+<a name="supporting-resources" class="anchor" href="#supporting-resources"><span class="octicon octicon-link"></span></a>Supporting Resources</h2>
+
+<p>In the event of difficulty, our Tutorial Assistant and Professor will provide assistance.</p>
+
+<h2>
+<a name="scope-of-the-project" class="anchor" href="#scope-of-the-project"><span class="octicon octicon-link"></span></a>Scope of the Project</h2>
+
+<p>The scope of the project is the addition and improvement of features for the Constituent accounts. Representative account features are not included in the scope of this project.</p>
+
+<h1>
 <a name="technology" class="anchor" href="#technology"><span class="octicon octicon-link"></span></a>Technology</h1>
 
 <p>Php, Codeignitor, W.E.T (Web Experience Tool kit), JavaScript</p>
@@ -69,17 +133,9 @@ Shelton Li</p>
 <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AqkCTMkYmy6EdGkwN3dKa0hCQWJFQkFENFBDWWZmS1E&amp;usp=sharing">Attendance spread sheet</a></li>
 </ul>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Citizenbridge maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
