--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Citizenbridge by CSC301H-Fall2013</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Citizenbridge : CtitizenBridge by Team Athabasca" />
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Citizenbridge</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/CSC301H-Fall2013/citizenbridge">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/CSC301H-Fall2013/citizenbridge">View on GitHub</a>
 
-      <section>
-        <div id="title">
-          <h1>Citizenbridge</h1>
-          <p>CtitizenBridge by Team Athabasca</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+          <h1 id="project_title">Citizenbridge</h1>
+          <h2 id="project_tagline">CtitizenBridge by Team Athabasca</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="team-athabasca-home-page" class="anchor" href="#team-athabasca-home-page"><span class="octicon octicon-link"></span></a>Team Athabasca home Page</h1>
 
@@ -133,9 +126,17 @@ TODO and DOING sections will contain appropriate items. A separate list will be 
 <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AqkCTMkYmy6EdGkwN3dKa0hCQWJFQkFENFBDWWZmS1E&amp;usp=sharing">Attendance spread sheet</a></li>
 </ul>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Citizenbridge maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
