Fixed Members section.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 <h1>
 <a name="members" class="anchor" href="#members"><span class="octicon octicon-link"></span></a>Members</h1>
 
-<p>Abegail Jakop
-Jie Kang
-John Tongol
-Lita Fan
-Shelton Li</p>
+<p>
+<li>Lita Fan</li>
+<li>Abegail Jakop</li>
+<li>Jie Kang</li>
+<li>Shelton Li</li>
+<li>John Tongol</li>
+<li>Lev Ufimtsev</li></p>
 
 <h1>
 <a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h1>
@@ -55,12 +57,7 @@ Shelton Li</p>
 <h2>
 <a name="members-1" class="anchor" href="#members-1"><span class="octicon octicon-link"></span></a>Members</h2>
 
-<p>Lita Fan
-Abegail Jakop
-Jie Kang
-Shelton Li
-John Tongol
-Lev Ufimtsev</p>
+
 
 <h2>
 <a name="values" class="anchor" href="#values"><span class="octicon octicon-link"></span></a>Values</h2>
