--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Citizenbridge : CtitizenBridge by Team Athabasca" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Citizenbridge</title>
+    <title>Citizenbridge by CSC301H-Fall2013</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/CSC301H-Fall2013/citizenbridge">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>Citizenbridge</h1>
+        <h2>CtitizenBridge by Team Athabasca</h2>
 
-          <h1 id="project_title">Citizenbridge</h1>
-          <h2 id="project_tagline">CtitizenBridge by Team Athabasca</h2>
+        <section id="downloads">
+          <a href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/CSC301H-Fall2013/citizenbridge" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a name="team-athabasca-home-page" class="anchor" href="#team-athabasca-home-page"><span class="octicon octicon-link"></span></a>Team Athabasca home Page</h1>
 
 <h1>
 <a name="members" class="anchor" href="#members"><span class="octicon octicon-link"></span></a>Members</h1>
 
-<p>
-<li>Lita Fan</li>
-<li>Abegail Jakop</li>
-<li>Jie Kang</li>
-<li>Shelton Li</li>
-<li>John Tongol</li>
-<li>Lev Ufimtsev</li></p>
+<p>Abegail Jakop
+Jie Kang
+John Tongol
+Lita Fan
+Shelton Li</p>
 
 <h1>
 <a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h1>
@@ -57,7 +56,12 @@
 <h2>
 <a name="members-1" class="anchor" href="#members-1"><span class="octicon octicon-link"></span></a>Members</h2>
 
-
+<p>Lita Fan
+Abegail Jakop
+Jie Kang
+Shelton Li
+John Tongol
+Lev Ufimtsev</p>
 
 <h2>
 <a name="values" class="anchor" href="#values"><span class="octicon octicon-link"></span></a>Values</h2>
@@ -109,7 +113,8 @@ TODO and DOING sections will contain appropriate items. A separate list will be 
 <h1>
 <a name="technology" class="anchor" href="#technology"><span class="octicon octicon-link"></span></a>Technology</h1>
 
-<p>Php, Codeignitor, W.E.T (Web Experience Tool kit), JavaScript</p>
+<p>Php, Codeignitor, W.E.T (Web Experience Tool kit), JavaScript. 
+W.E.T is the Canadian's government official framework. It is built on top of the twitter bootstrap engine. It has accessibility features and has support for 36 languages, making it an ideal solution for a public facing website.</p>
 
 <h1>
 <a name="deliverable-links" class="anchor" href="#deliverable-links"><span class="octicon octicon-link"></span></a>Deliverable Links</h1>
@@ -121,15 +126,6 @@ TODO and DOING sections will contain appropriate items. A separate list will be 
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Citizenbridge maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
     
-
   </body>
 </html>
