Removed Download Section Again
Please don't create gh-pages using GitHub anymore :(

--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     <header>
       <div class="container">
         <h1>Citizenbridge</h1>
-        <h2>CtitizenBridge by Team Athabasca</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/CSC301H-Fall2013/citizenbridge/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/CSC301H-Fall2013/citizenbridge/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/CSC301H-Fall2013/citizenbridge" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+        <h2>CitizenBridge by Team Athabasca</h2>
       </div>
     </header>
 
