Fixed Members List
Added Lev Ufimtsev

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
 <h1>
 <a name="members" class="anchor" href="#members"><span class="octicon octicon-link"></span></a>Members</h1>
 
-<p>Abegail Jakop
-Jie Kang
-John Tongol
-Lita Fan
-Shelton Li</p>
+<p>
+<li>Abegail Jakop</li>
+<li>Jie Kang</li>
+<li>John Tongol</li>
+<li>Lev Ufimtsev</li>
+<li>Lita Fan</li>
+<li>Shelton Li</li>
+</p>
 
 <h1>
 <a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h1>
