--- a/www/main/JSON.html
+++ b/www/main/JSON.html
@@ -1,27 +1,64 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-  <style>img{ height: 100px; float: left; }</style>
-  <script src="js/jquery-1.9.0.min.js" type="text/javascript"></script>
-</head>
-<body>
- <script type="text/javascript">
-	$.getJSON( "test.json", function( data ) {
-		<script type="text/javascript">
-		$.getJSON( "test.json", function( data ) {
-			$.each(data.results, function (i, item) {
-				given = item.name.given;
-				family = item.name.family;
-				constituency = item.constituency.name.en;
-				province = item.constituency.province.name.en;
-				html = "<th>" + given + " " + family + "</th>";
-				html += "<th>" + constituency + ", " + province + "</th>";
-				$(".rep-table").append("<tr>"+ html +"</tr>");
-				console.log("Name: " + given + " " + family + "\n");
-				console.log(constituency + ", " + province);
-			})
-		});
-</script>
- 
-</body>
-</html>
+<!DOCTYPE html>
+<!--[if IE 7]><html lang="en" class="no-js ie7"><![endif]-->
+<!--[if IE 8]><html lang="en" class="no-js ie8"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" class="no-js">
+<!--<![endif]-->
+	<head>
+		<meta charset="utf-8" />
+		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+		wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+		<title> Citizenbridge Main</title>
+
+		<link rel="shortcut icon" href="../dist/theme-wet-boew/images/favicon.ico" />
+		<meta name="description" content="Web Experience Toolkit (WET) working examples." />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!--[if lte IE 8]>
+		<script src="../dist/js/jquery-ie.min.js"></script>
+		<script src="../dist/js/polyfills/html5shiv-min.js"></script>
+		<link rel="stylesheet" href="../dist/grids/css/util-ie-min.css" />
+		<link rel="stylesheet" href="../dist/js/css/pe-ap-ie-min.css" />
+		<link rel="stylesheet" href="../dist/theme-wet-boew/css/theme-ie-min.css" />
+		<noscript><link rel="stylesheet" href="../dist/theme-wet-boew/css/theme-ns-ie-min.css" /></noscript>
+		<![endif]-->
+		<!--[if gt IE 8]><!-->
+		<script src="../dist/js/jquery.min.js"></script>
+		<link rel="stylesheet" href="../dist/grids/css/util-min.css" />
+		<link rel="stylesheet" href="../dist/js/css/pe-ap-min.css" />
+		<link rel="stylesheet" href="../dist/theme-wet-boew/css/theme-min.css" />
+		<noscript><link rel="stylesheet" href="../dist/theme-wet-boew/css/theme-ns-min.css" /></noscript>
+		<!--<![endif]-->
+
+		<!-- CustomCSSStart -->
+
+		<!-- ATHA__Style_sheet  -->
+
+		<style>
+		#components td {vertical-align: middle;}
+		</style>
+		<!-- CustomCSSEnd -->
+		
+		<script class="jsbin" src="http://datatables.net/download/build/jquery.dataTables.nightly.js"></script>
+		
+	</head>
+	<body>
+		<div id="main">
+			<table id="example" class="wet-boew-tables">
+				<thead>
+					<tr role="row">
+						<th>Given Name</th>
+						<th>Family Name</th>
+						<th>Caucus</th>
+						<th>Constituency</th>
+					</tr>
+				</thead>
+				<tbody id="rep-table">
+				</tbody>
+			</table>
+		</div>
+		
+		
+		<script type="text/javascript" src="ParlData.js"></script>
+		<script type="text/javascript" src="script.js"></script>
+	</body>
