added comments to ParlData.js and script.js

--- a/www/main/JSON.html
+++ b/www/main/JSON.html
@@ -39,26 +39,19 @@
 		</style>
 		<!-- CustomCSSEnd -->
 		
+		<!-- IMPORTANT for customizable datatables-->
 		<script class="jsbin" src="http://datatables.net/download/build/jquery.dataTables.nightly.js"></script>
 		
 	</head>
 	<body>
+		
 		<div id="main">
-			<table id="example" class="wet-boew-tables">
-				<thead>
-					<tr role="row">
-						<th>Given Name</th>
-						<th>Family Name</th>
-						<th>Caucus</th>
-						<th>Constituency</th>
-					</tr>
-				</thead>
-				<tbody id="rep-table">
-				</tbody>
-			</table>
+			
+		<!--This is where the table goes-->
+			
 		</div>
 		
-		
+		<!-- script to create the table -->
 		<script type="text/javascript" src="ParlData.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
