--- a/www/main/autotest.html
+++ b/www/main/autotest.html
@@ -10,7 +10,7 @@
 	<body>
 		<table border="1">
 			<tr> <th> Test cases </th>   <th> Result</th>  </tr>
-			<tr> <td> Example test </td> <td id="t1"> </td> In Progress </tr> <!-- Copy & paste for additional test cases -->
+			<tr> <td> Example test </td> <td id="t1">In Progress </td>  </tr> <!-- Copy & paste for additional test cases -->
 
 
 			<tr> <td> <b> Load Rep list </b> (this takes time) <br> 
