--- a/www/main/autotest.html
+++ b/www/main/autotest.html
@@ -15,11 +15,18 @@
 
 			<tr> <td> <b> Load Rep list </b> (this takes time) <br> 
 				This test tests whether we are able to retrieve the<br> 
-				list of representatives from the parliment website. <br>
+				list of representatives from the parliament website. <br>
 				If this test fails than there is an issue accessing the api. <br>
 				Note, the test auto-fails if the list is not retrieved within 4 seconds <br>
 				or if you are not connected to the internet during testing. </td> <td id="t2"> In Progress </td> </tr>
 
+
+			<tr> <td> <b> Load Bills list </b> (this takes time) <br>
+				This test tests whether we are able to retrieve the<br> 
+				list of bills from the parliament website. If this test <br>
+				fails than there is an issue accessing the api. Note, the <br>
+				test auto-fails if the list is not retrieved within 4 seconds <br>
+				or if you are not connected to the internet during testing. </td> <td id="t3"> In Progress </td> </tr>
 
 
 		</table>
