Added 2 more test cases. Induvidual rep and induvidual bill.

--- a/www/main/autotest.html
+++ b/www/main/autotest.html
@@ -28,6 +28,15 @@
 				test auto-fails if the list is not retrieved within 4 seconds <br>
 				or if you are not connected to the internet during testing. </td> <td id="t3"> In Progress </td> </tr>
 
+			<tr> <td> <b> Load induvidual Representative </b> <br> 
+				Tests if we can aquire information about an induvidual<br>
+				representative from the API. Details are the same as above.  </td> <td id="t4"> In Progress </td> </tr>
+
+			<tr> <td> <b> Load induvidual Bill </b> <br> 
+				Tests if we can aquire information about an Bill<br>
+				from the API. Details are the same as above.  </td> <td id="t5"> In Progress </td> </tr>
+
+
 
 		</table>
 
