Added bunch of dummy test cases.

--- a/www/main/autotest.html
+++ b/www/main/autotest.html
@@ -13,7 +13,7 @@
 			<tr> <td> Example test </td> <td id="t1">In Progress </td>  </tr> <!-- Copy & paste for additional test cases -->
 
 
-			<tr> <td> <b> Load Rep list </b> (this takes time) <br> 
+			<tr> <td> <b> (User Story 1) Load Rep list </b> (this takes time) <br> 
 				This test tests whether we are able to retrieve the<br> 
 				list of representatives from the parliament website. <br>
 				If this test fails than there is an issue accessing the api. <br>
@@ -21,20 +21,32 @@
 				or if you are not connected to the internet during testing. </td> <td id="t2"> In Progress </td> </tr>
 
 
-			<tr> <td> <b> Load Bills list </b> (this takes time) <br>
+			<tr> <td> <b> (U.S 6) Load Bills list </b> (this takes time) <br>
 				This test tests whether we are able to retrieve the<br> 
 				list of bills from the parliament website. If this test <br>
 				fails than there is an issue accessing the api. Note, the <br>
 				test auto-fails if the list is not retrieved within 4 seconds <br>
 				or if you are not connected to the internet during testing. </td> <td id="t3"> In Progress </td> </tr>
 
-			<tr> <td> <b> Load induvidual Representative </b> <br> 
+			<tr> <td> <b> (2) Load induvidual Representative </b> <br> 
 				Tests if we can aquire information about an induvidual<br>
 				representative from the API. Details are the same as above.  </td> <td id="t4"> In Progress </td> </tr>
 
-			<tr> <td> <b> Load induvidual Bill </b> <br> 
+			<tr> <td> <b> (7) Load induvidual Bill </b> <br> 
 				Tests if we can aquire information about an Bill<br>
 				from the API. Details are the same as above.  </td> <td id="t5"> In Progress </td> </tr>
+
+			<tr> <td> <b> (5) Test find rep near me </b> <br> 
+					Given a user post code, this function should return the id of the<br>
+					representatives that is the closes to my area  </td> <td id="t6"> In Progress </td> </tr>
+
+			<tr> <td> <b> (3) List recent Rep activity </b> <br> 
+					Aquire a list of his recent activity and present it on the site  </td> <td id="t7"> In Progress </td> </tr>
+
+			<tr> <td> <b> (10) See Progress of a bill </b> <br> 
+					Retrieve the status of an induviual bill  </td> <td id="t8"> In Progress </td> </tr>
+
+
 
 
 
