--- a/www/main/autotest.html
+++ b/www/main/autotest.html
@@ -17,16 +17,16 @@
 				This test tests whether we are able to retrieve the<br> 
 				list of representatives from the parliament website. <br>
 				If this test fails than there is an issue accessing the api. <br>
-				Note, the test auto-fails if the list is not retrieved within 4 seconds <br>
-				or if you are not connected to the internet during testing. </td> <td id="t2"> In Progress </td> </tr>
+				Note, the test auto-fails if the list is not retrieved within <b>7 seconds</b> <br>
+				or if you are not connected to the internet during testing. <br>
+				These test could fail if the API is overloaded or is unresponsive, <br>
+				In this case sometimes some of the tests fail and others succeed </td> <td id="t2"> In Progress </td> </tr>
 
 
 			<tr> <td> <b> (U.S 6) Load Bills list </b> (this takes time) <br>
 				This test tests whether we are able to retrieve the<br> 
-				list of bills from the parliament website. If this test <br>
-				fails than there is an issue accessing the api. Note, the <br>
-				test auto-fails if the list is not retrieved within 4 seconds <br>
-				or if you are not connected to the internet during testing. </td> <td id="t3"> In Progress </td> </tr>
+				list of bills from the parliament website. <br>
+				Details are the same as above </td> <td id="t3"> In Progress </td> </tr>
 
 			<tr> <td> <b> (2) Load induvidual Representative </b> <br> 
 				Tests if we can aquire information about an induvidual<br>
