getting latest build.

--- a/www/main/autotest.html
+++ b/www/main/autotest.html
@@ -46,6 +46,9 @@
 			<tr> <td> <b> (10) See Progress of a bill </b> <br> 
 					Retrieve the status of an induviual bill  </td> <td id="t8"> In Progress </td> </tr>
 
+			<tr> <td> <b>  test index of Representatives </b> <br> 
+					Download the rep list, and traverse the list from start to finish. </td> <td id="t9"> In Progress </td> </tr>
+
 
 
 
